# chess

./: .gitignore  BUILD_INSTRUCTIONS.md  CMakeLists.txt  README.md  SETUP.md  build.bat  build.sh  build_mingw.bat  run.bat
include/: Chess.h  ChessBoard.h  MainWindow.h
src/: Chess.cpp  ChessBoard.cpp  MainWindow.cpp
